--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,14 @@
 /* write your override styles here */
+#wall .tag-1{
+    display: none;
+    border: 1px ;
+    color: transparent;
+    height: 1px;
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: auto;
+     z-index:9999 ;
+     background-color:rgba(0, 0, 0, 0.1);
+     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)); 
+}
